# divine-agi-v15

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  main.rs  nixpacks.toml  railway.toml
migrations/: 20260102085414_create_human_genome_table.sql  20260102_create_genome.sql
scr/: multi_chain.rs
src/: consensus.rs  genome.rs  lib.rs  main.rs
tests/: integration_tests.rs
